# leptos-alpine-surrealdb-tailwind

./: .gitattributes  .gitignore  Cargo.toml  justfile  tailwind.config.js
src/: main.rs
src/api/: login.rs  mod.rs
src/routes/: login.rs  mod.rs
static/: styles.css
