[package]
name = "leptos-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
http = "0.2.8"
leptos = { git = "https://github.com/gbj/leptos/", default-features = false, features = ["ssr", "stable"] }
leptos_dom = { git = "https://github.com/gbj/leptos/", default-features = false, features = ["ssr", "stable"] }
tokio = { version = "1.23.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["fs"] }
